# learn-rust

./: .gitignore  README.md
bootstrap/: .gitignore  Cargo.toml  output.plot
bootstrap/src/: csv_reader.rs  dataframe.rs  main.rs  model.rs  plotter.rs
dirreader/: Cargo.toml
dirreader/src/: entry.rs  main.rs
gitstats/: Cargo.toml  edit.sh  run.sh
gitstats/src/: main.rs  stats.rs
